--- a/index.html
+++ b/index.html
@@ -3,13 +3,34 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="assets/css/normalize.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 	<title>forms</title>
 </head>
 
 <body>
+	<div class="form">
+		<div class="form__top"></div>
+		<div class="form__main"></div>
+		<div class="form__bottom"></div>
+	</div>
+	<!-- <form action="#" method="post" autocomplete="on" id="form" name="form" novalidate target="_self">
+		<legend></legend>
+		<fieldset form="form" name="">
+			<p><input type="text" name="" id="" placeholder="Иванов Иван Иванович" autocomplete="on" required></p>
+			<p><input type="email" name="" id="" placeholder="Введите Ваш Email" autocomplete="on" required></p>
 
+			<p><input type="tel" name="" id="" placeholder="Введите Ваш телефон" autocomplete="on" required></p>
+			<p><textarea name="" id="" cols="30" rows="10" placeholder="" autocomplete="on"></textarea></p>
+
+
+		</fieldset>
+		<fieldset form="form" name="captcha">
+			<p><input type="password" name="" id="" required></p>
+		</fieldset>
+		<p><input type="submit" value=""></p>
+	</form> -->
 </body>
 
 </html>
