--- a/index.html
+++ b/index.html
@@ -12,39 +12,39 @@
 <body>
 	<div class="form">
 		<div class="form__top">
-			<button class="form__top-btn">
-				<img src="../assets/images/cross.png" alt="cross" class="form__top-img">
+			<button class="form__btn-close">
+				<img classform__top-img src="../assets/images/cross.png" alt="cross" class="form__img">
 			</button>
-			<div class="form__top-menu">
-				<ol class="form__top-list">
-					<li class="form__top-item"><a class="form__top-link" href="#">Главная</a></li>
-					<li class="form__top-item"><a class="form__top-link" href="#">Контакты</a></li>
-					<li class="form__top-active">Форма обратной связи</li>
+			<div class="form__menu">
+				<ol class="form__list">
+					<li class="form__item"><a class="form__link" href="#">Главная</a></li>
+					<li class="form__item"><a class="form__link" href="#">Контакты</a></li>
+					<li class="form__active">Форма обратной связи</li>
 				</ol>
 
-				<h1 class="form__top-title">Форма обратной связи</h1>
+				<h1 class="form__title">Форма обратной связи</h1>
 			</div>
 		</div>
 		<div class="form__main">
-			<form class="form__main-form" action="#" method="post" autocomplete="on" id="form" name="form" novalidate
+			<form class="form__form" action="#" method="post" autocomplete="on" id="form" name="form" novalidate
 				target="_self"></form>
-			<input class="form__main-input" type="text" name="text" id="text" placeholder="Иванов Иван Иванович"
+			<input class="form__input" type="text" name="text" id="text" placeholder="Иванов Иван Иванович"
 				autocomplete="on" required>
-			<input class="form__main-input" type="email" name="email" id="email" placeholder="Введите Ваш Email"
+			<input class="form__input" type="email" name="email" id="email" placeholder="Введите Ваш Email"
 				autocomplete="on" required>
-			<input class="form__main-input" type="tel" name="tel" id="tel" placeholder="Введите Ваш телефон"
-				autocomplete="on" required>
-			<textarea class="form__main-text" name="comment" id="comment" placeholder="" autocomplete="on"></textarea>
+			<input class="form__input" type="tel" name="tel" id="tel" placeholder="Введите Ваш телефон" autocomplete="on"
+				required>
+			<textarea class="form__text" name="comment" id="comment" placeholder="" autocomplete="on"></textarea>
 		</div>
 		<div class="form__bottom">
-			<div class="form__bottom-wrapper">
-				<div class="from__bottom-box">
-					<input class="form__bottom-input" type="password" name="password" id="password">
-					<span class="form__bottom-text">Введите код на картинке справа</span>
+			<div class="form__wrapper">
+				<div class="from__box">
+					<input class="form__input" type="text" name="captcha" id="captcha">
+					<span class="form__text-bottom">Введите код на картинке справа</span>
 				</div>
-				<img src="../assets/images/capcha.png" alt="captcha">
+				<img class="form__img" src="../assets/images/capcha.png" alt="captcha">
 			</div>
-			<button class="form__bottom-btn" type="submit" value="Отправить">Отправить</button>
+			<button class="form__btn-submit" type="submit" value="Отправить">Отправить</button>
 		</div>
 	</div>
 
