add effects hover in btn

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
 				autocomplete="on" required>
 			<input class="form__input" type="tel" name="tel" id="tel" placeholder="Введите Ваш телефон" autocomplete="on"
 				required>
-			<textarea class="form__text" name="comment" id="comment" placeholder="" autocomplete="on"></textarea>
+			<textarea class="form__input text" name="comment" id="comment" placeholder="" autocomplete="on"></textarea>
 		</div>
 		<div class="form__bottom">
 			<div class="form__wrapper">
 				<div class="from__box">
-					<input class="form__input" type="text" name="captcha" id="captcha">
-					<span class="form__text-bottom">Введите код на картинке справа</span>
+					<input class="form__captcha" type="text" name="captcha" id="captcha">
+					<label class="form__text-bottom">Введите код на картинке справа</д>
 				</div>
-				<img class="form__img" src="../assets/images/capcha.png" alt="captcha">
+				<img class="form__img-captcha" src="../assets/images/captcha" alt="captcha">
 			</div>
 			<button class="form__btn-submit" type="submit" value="Отправить">Отправить</button>
 		</div>
